--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.5",
-    "cssnano": "^3.4.0",
     "concurrently": "^2.0.0",
+    "cssnano": "^3.4.0",
     "gulp": "^3.9.0",
     "gulp-ext-replace": "^0.2.0",
     "gulp-imagemin": "^2.4.0",
@@ -29,6 +29,7 @@
     "lite-server": "^2.1.0",
     "postcss": "^5.0.13",
     "postcss-scss": "^0.1.3",
-    "precss": "^1.3.0"
+    "precss": "^1.3.0",
+    "tslint": "^3.10.2"
   }
 }
